@@ -20,6 +20,7 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * Controller responsável pela gestão do calendário e dos bloqueios de agenda.
@@ -44,7 +45,7 @@ public class CalendarioController {
          */
         @PostMapping("/bloquear")
         @PreAuthorize("hasAnyRole('SECRETARIA', 'BALNEARIO')")
-        public ResponseEntity<Map<String, String>> bloquearHorario(@RequestBody BloquearHorarioRequest request) {
+        public ResponseEntity<?> bloquearHorario(@RequestBody BloquearHorarioRequest request) {
 
                 Utilizador funcionario = utilizadorRepository.findById(request.getFuncionarioId())
                                 .orElseThrow(() -> new NotFoundException("Funcionário não encontrado"));
@@ -69,7 +70,7 @@ public class CalendarioController {
          */
         @DeleteMapping("/{id}")
         @PreAuthorize("hasAnyRole('SECRETARIA', 'BALNEARIO')")
-        public ResponseEntity<Map<String, String>> removerBloqueio(@PathVariable Long id) {
+        public ResponseEntity<?> removerBloqueio(@PathVariable Long id) {
                 calendarioService.removerBloqueio(id);
                 return ResponseEntity.ok(
                                 Map.of("message", "Bloqueio removido"));
@@ -103,7 +104,7 @@ public class CalendarioController {
 
                 List<String> dates = calendarioService.getFeriadosDoAno(ano).stream()
                                 .map(LocalDate::toString)
-                                .toList();
+                                .collect(Collectors.toList());
                 return ResponseEntity.ok(dates);
         }
 
