@@ -5,7 +5,9 @@ import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -17,7 +19,6 @@ import pt.florinhas.common_data.repository.UtenteRepository;
 import pt.florinhas.common_data.repository.UtilizadorRepository;
 import pt.florinhas.common_data.validation.NifValidator;
 import pt.florinhas.common_data.domain.Funcionario;
-import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import pt.florinhas.common_data.domain.FuncionarioTipo;
@@ -57,52 +58,38 @@ import pt.florinhas.marcacoes.service.email.EmailService;
 @Slf4j
 public class UtilizadorService {
 
-    private static final String AUDIT_LOG_UTILIZADOR = "UTILIZADOR";
-    private static final String KEY_DOCUMENTOS = "documentos";
-    private static final String KEY_MARCACOES = "marcacoes";
+    @Autowired
+    private UtilizadorRepository utilizadorRepository;
 
-    private final UtilizadorRepository utilizadorRepository;
-    private final UtenteRepository utenteRepository;
-    private final FuncionarioRepository funcionarioRepository;
-    private final EmailService emailService;
-    private final AuditLogService auditLogService;
-    private final NotificacaoService notificacaoService;
-    private final NifValidator nifValidator;
-    private final PasswordEncoder passwordEncoder;
-    private final DocumentoRepository documentoRepository;
-    private final MarcacaoRepository marcacaoRepository;
-    private final CryptoUtils cryptoUtils;
-    private final ObjectProvider<UtilizadorService> selfProvider;
+    @Autowired
+    private UtenteRepository utenteRepository;
 
-    public UtilizadorService(UtilizadorRepository utilizadorRepository,
-            UtenteRepository utenteRepository,
-            FuncionarioRepository funcionarioRepository,
-            EmailService emailService,
-            AuditLogService auditLogService,
-            NotificacaoService notificacaoService,
-            NifValidator nifValidator,
-            PasswordEncoder passwordEncoder,
-            DocumentoRepository documentoRepository,
-            MarcacaoRepository marcacaoRepository,
-            CryptoUtils cryptoUtils,
-            ObjectProvider<UtilizadorService> selfProvider) {
-        this.utilizadorRepository = utilizadorRepository;
-        this.utenteRepository = utenteRepository;
-        this.funcionarioRepository = funcionarioRepository;
-        this.emailService = emailService;
-        this.auditLogService = auditLogService;
-        this.notificacaoService = notificacaoService;
-        this.nifValidator = nifValidator;
-        this.passwordEncoder = passwordEncoder;
-        this.documentoRepository = documentoRepository;
-        this.marcacaoRepository = marcacaoRepository;
-        this.cryptoUtils = cryptoUtils;
-        this.selfProvider = selfProvider;
-    }
+    @Autowired
+    private FuncionarioRepository funcionarioRepository;
 
-    private UtilizadorService self() {
-        return selfProvider.getIfAvailable();
-    }
+    @Autowired
+    private EmailService emailService;
+
+    @Autowired
+    private AuditLogService auditLogService;
+
+    @Autowired
+    private NotificacaoService notificacaoService;
+
+    @Autowired
+    private NifValidator nifValidator;
+
+    @Autowired
+    private PasswordEncoder passwordEncoder;
+    
+    @Autowired
+    private DocumentoRepository documentoRepository;
+    
+    @Autowired
+    private MarcacaoRepository marcacaoRepository;
+
+    @Autowired
+    private CryptoUtils cryptoUtils;
 
     /*
      * =========================================================
@@ -167,8 +154,8 @@ public class UtilizadorService {
 
         if (existingUser.isPresent()) {
             Utilizador u = existingUser.get();
-            if (u instanceof Utente utente) {
-                return utente;
+            if (u instanceof Utente) {
+                return (Utente) u;
             } else {
                 throw new ConflictException(
                         "Este NIF (" + nif + ") já está registado como Funcionário. Não pode ser usado como Utente.");
@@ -295,10 +282,11 @@ public class UtilizadorService {
         Utilizador atualizado = utilizadorRepository.save(utilizador);
 
         auditLogService.log(
-                "ATUALIZAR_PERFIL",
-                AUDIT_LOG_UTILIZADOR,
-                utilizadorId,
-                String.format("Perfil atualizado: %s", utilizador.getNome()));
+            "ATUALIZAR_PERFIL",
+            "UTILIZADOR",
+            utilizadorId,
+            String.format("Perfil atualizado: %s", utilizador.getNome())
+        );
 
         return atualizado;
     }
@@ -312,11 +300,10 @@ public class UtilizadorService {
     public List<UtilizadorResponseDTO> listarTodosFuncionarios() {
         return funcionarioRepository.findAll().stream()
                 .map(UtilizadorResponseDTO::fromUtilizador)
-                .toList();
+                .collect(Collectors.toList());
     }
 
-    public Page<UtilizadorResponseDTO> pesquisarFuncionarios(String nome, FuncionarioTipo tipo, String nif,
-            Pageable pageable) {
+    public Page<UtilizadorResponseDTO> pesquisarFuncionarios(String nome, FuncionarioTipo tipo, String nif, Pageable pageable) {
         String nifHash = (nif != null && !nif.isBlank()) ? cryptoUtils.generateBlindIndex(nif) : null;
         return funcionarioRepository.findByNomeAndTipoFilter(nome, tipo, nifHash, pageable)
                 .map(UtilizadorResponseDTO::fromUtilizador);
@@ -325,7 +312,7 @@ public class UtilizadorService {
     public List<UtilizadorResponseDTO> listarFuncionariosPendentes() {
         return funcionarioRepository.findByActivoFalse().stream()
                 .map(UtilizadorResponseDTO::fromUtilizador)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -334,7 +321,7 @@ public class UtilizadorService {
     public List<UtilizadorResponseDTO> listarTodosUtentes() {
         return utenteRepository.findAll().stream()
                 .map(UtilizadorResponseDTO::fromUtilizador)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public Page<UtilizadorResponseDTO> pesquisarUtentes(String nome, String nif, Pageable pageable) {
@@ -352,11 +339,12 @@ public class UtilizadorService {
         funcionarioRepository.save(funcionario);
 
         auditLogService.log(
-                "APROVAR_FUNCIONARIO",
-                "FUNCIONARIO",
-                id,
-                String.format("Funcionário aprovado: %s (%s) - Tipo: %s",
-                        funcionario.getNome(), funcionario.getEmail(), funcionario.getTipo()));
+            "APROVAR_FUNCIONARIO",
+            "FUNCIONARIO",
+            id,
+            String.format("Funcionário aprovado: %s (%s) - Tipo: %s", 
+                funcionario.getNome(), funcionario.getEmail(), funcionario.getTipo())
+        );
     }
 
     /*
@@ -433,12 +421,13 @@ public class UtilizadorService {
         Utilizador salvo = utilizadorRepository.save(novoUtilizador);
 
         auditLogService.log(
-                "CRIAR_CONTA",
-                AUDIT_LOG_UTILIZADOR,
-                salvo.getId(),
-                String.format("Conta criada pela secretaria: %s (%s) - Tipo: %s",
-                        salvo.getNome(), salvo.getEmail(),
-                        salvo instanceof Funcionario funcionario ? funcionario.getTipo() : "UTENTE"));
+            "CRIAR_CONTA",
+            "UTILIZADOR",
+            salvo.getId(),
+            String.format("Conta criada pela secretaria: %s (%s) - Tipo: %s", 
+                salvo.getNome(), salvo.getEmail(), 
+                salvo instanceof Funcionario ? ((Funcionario)salvo).getTipo() : "UTENTE")
+        );
 
         try {
             emailService.sendPassword(novoUtilizador.getEmail(), passwordInicial);
@@ -473,23 +462,24 @@ public class UtilizadorService {
             utilizador.setTelefone(request.getUpdatedContact());
         }
 
-        if (utilizador instanceof Utente utente) {
-            utente.setActivo(false);
-        } else if (utilizador instanceof Funcionario funcionario) {
-            funcionario.setActivo(false);
+        if (utilizador instanceof Utente) {
+            ((Utente) utilizador).setActivo(false);
+        } else if (utilizador instanceof Funcionario) {
+            ((Funcionario) utilizador).setActivo(false);
         }
 
         String novaPassword = gerarPasswordSegura();
         utilizador.setPassHash(passwordEncoder.encode(novaPassword));
 
         utilizadorRepository.save(utilizador);
-
+        
         auditLogService.log(
-                "RECUPERAR_CONTA",
-                AUDIT_LOG_UTILIZADOR,
-                utilizador.getId(),
-                String.format("Conta recuperada pela secretaria: %s (%s)",
-                        utilizador.getNome(), utilizador.getNif()));
+            "RECUPERAR_CONTA",
+            "UTILIZADOR",
+            utilizador.getId(),
+            String.format("Conta recuperada pela secretaria: %s (%s)", 
+                utilizador.getNome(), utilizador.getNif())
+        );
 
         try {
             emailService.sendPassword(utilizador.getEmail(), novaPassword);
@@ -521,7 +511,7 @@ public class UtilizadorService {
     @Transactional
     public void solicitarEliminacaoConta() {
         Utilizador utilizador = buscarUtilizadorAutenticado();
-
+        
         if (Boolean.TRUE.equals(utilizador.getDeleteRequested())) {
             throw new BadRequestException("Já existe um pedido de eliminação pendente para esta conta.");
         }
@@ -533,40 +523,43 @@ public class UtilizadorService {
         log.info("Pedido de eliminação registado para utilizador ID: {}", utilizador.getId());
 
         auditLogService.log(
-                "SOLICITAR_ELIMINACAO",
-                AUDIT_LOG_UTILIZADOR,
-                utilizador.getId(),
-                String.format("Pedido de eliminação registado para utilizador: %s (%s)",
-                        utilizador.getNome(), utilizador.getNif()));
+            "SOLICITAR_ELIMINACAO",
+            "UTILIZADOR",
+            utilizador.getId(),
+            String.format("Pedido de eliminação registado para utilizador: %s (%s)", 
+                utilizador.getNome(), utilizador.getNif())
+        );
 
         // Notificar secretaria
         try {
             List<Funcionario> secretarias = funcionarioRepository.findByTipo(FuncionarioTipo.SECRETARIA);
             String titulo = "Pedido de Eliminação de Conta (RGPD)";
             String mensagem = String.format(
-                    "O utilizador %s (NIF: %s) solicitou a eliminação da sua conta. " +
-                            "Por favor, processe a anonimização dos dados no prazo de 1 mês conforme RGPD Art.º 17.",
-                    utilizador.getNome(), utilizador.getNif());
-
+                "O utilizador %s (NIF: %s) solicitou a eliminação da sua conta. " +
+                "Por favor, processe a anonimização dos dados no prazo de 1 mês conforme RGPD Art.º 17.",
+                utilizador.getNome(), utilizador.getNif()
+            );
+            
             // Criar notificação para cada secretária
             for (Funcionario secretaria : secretarias) {
                 try {
                     notificacaoService.criarNotificacao(
-                            secretaria.getId(),
-                            titulo,
-                            mensagem,
-                            "ALERTA");
+                        secretaria.getId(),
+                        titulo,
+                        mensagem,
+                        "ALERTA"
+                    );
                 } catch (Exception e) {
-                    log.error("Erro ao criar notificação para secretaria ID {}: {}", secretaria.getId(),
-                            e.getMessage());
+                    log.error("Erro ao criar notificação para secretaria ID {}: {}", secretaria.getId(), e.getMessage());
                 }
             }
 
             // Enviar email à secretaria
             emailService.sendGenericEmail(
-                    "secretaria@florinhasdovouga.pt",
-                    titulo,
-                    mensagem);
+                "secretaria@florinhasdovouga.pt",
+                titulo,
+                mensagem
+            );
         } catch (Exception e) {
             log.error("Erro ao notificar secretaria sobre pedido de eliminação: {}", e.getMessage());
         }
@@ -579,10 +572,10 @@ public class UtilizadorService {
     @Transactional
     public void anonimizarUtilizador(Long id) {
         Utilizador utilizador = obterUtilizadorPorId(id);
-
+        
         String nifOriginal = utilizador.getNif();
         String timestamp = String.valueOf(System.currentTimeMillis());
-
+        
         // Anonimizar dados pessoais
         utilizador.setNome("Utilizador Anónimo #" + id);
         utilizador.setEmail("anonimo." + timestamp + "@anonimizado.local");
@@ -596,29 +589,30 @@ public class UtilizadorService {
         utilizador.setMoradaEmprego(null);
         utilizador.setProfissao(null);
         utilizador.setDataNasc(null);
-
+        
         // Invalidar password
         utilizador.setPassHash(passwordEncoder.encode("ANONIMIZADO_" + timestamp));
-
+        
         // Marcar como processado
         utilizador.setDeleteRequested(false);
         utilizador.setDeleteRequestedAt(null);
-
+        
         // Desativar conta
-        if (utilizador instanceof Utente utente) {
-            utente.setActivo(false);
-        } else if (utilizador instanceof Funcionario funcionario) {
-            funcionario.setActivo(false);
+        if (utilizador instanceof Utente) {
+            ((Utente) utilizador).setActivo(false);
+        } else if (utilizador instanceof Funcionario) {
+            ((Funcionario) utilizador).setActivo(false);
         }
-
+        
         utilizadorRepository.save(utilizador);
-
+        
         auditLogService.log(
-                "ANONIMIZAR_UTILIZADOR",
-                AUDIT_LOG_UTILIZADOR,
-                id,
-                String.format("Utilizador anonimizado (NIF original: %s) - RGPD Art.º 17", nifOriginal));
-
+            "ANONIMIZAR_UTILIZADOR",
+            "UTILIZADOR",
+            id,
+            String.format("Utilizador anonimizado (NIF original: %s) - RGPD Art.º 17", nifOriginal)
+        );
+        
         log.info("Utilizador ID {} (NIF original: {}) foi anonimizado com sucesso", id, nifOriginal);
     }
 
@@ -634,14 +628,15 @@ public class UtilizadorService {
         String nifOriginal = utilizador.getNif();
         String nomeOriginal = utilizador.getNome();
 
-        self().anonimizarUtilizador(id);
+        anonimizarUtilizador(id);
 
         auditLogService.log(
-                "ELIMINAR_UTILIZADOR",
-                AUDIT_LOG_UTILIZADOR,
-                id,
-                String.format("Utilizador anonimizado e desativado (Nome: %s, NIF: %s) - RGPD Art.º 17",
-                        nomeOriginal, nifOriginal));
+            "ELIMINAR_UTILIZADOR",
+            "UTILIZADOR",
+            id,
+            String.format("Utilizador anonimizado e desativado (Nome: %s, NIF: %s) - RGPD Art.º 17",
+                nomeOriginal, nifOriginal)
+        );
 
         log.info("Utilizador ID {} (NIF original: {}) foi anonimizado e desativado", id, nifOriginal);
     }
@@ -651,11 +646,11 @@ public class UtilizadorService {
      */
     private Utilizador buscarUtilizadorAutenticado() {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
-
+        
         if (auth == null || !auth.isAuthenticated() || "anonymousUser".equals(auth.getName())) {
             throw new BadRequestException("Utilizador não autenticado");
         }
-
+        
         String email = auth.getName();
         return buscarPorEmail(email);
     }
@@ -678,9 +673,9 @@ public class UtilizadorService {
     @Transactional(readOnly = true)
     public Map<String, Object> exportarDadosUtilizador() {
         Utilizador utilizador = buscarUtilizadorAutenticado();
-
+        
         Map<String, Object> dados = new HashMap<>();
-
+        
         // Dados pessoais
         Map<String, Object> dadosPessoais = new HashMap<>();
         dadosPessoais.put("id", utilizador.getId());
@@ -698,26 +693,26 @@ public class UtilizadorService {
         dadosPessoais.put("telefoneEmprego", utilizador.getTelefoneEmprego());
         dadosPessoais.put("dataCriacao", utilizador.getCreatedAt());
         dados.put("dadosPessoais", dadosPessoais);
-
+        
         // Documentos
         try {
-            if (utilizador instanceof Utente utente) {
-                dados.put(KEY_DOCUMENTOS, documentoRepository.findByUtente(utente)
+            if (utilizador instanceof Utente) {
+                dados.put("documentos", documentoRepository.findByUtente((Utente) utilizador)
                         .stream()
                         .map(pt.florinhas.marcacoes.dto.DocumentoDTO::fromDocumento)
-                        .toList());
+                        .collect(Collectors.toList()));
             } else {
-                dados.put(KEY_DOCUMENTOS, new ArrayList<>());
+                dados.put("documentos", new ArrayList<>());
             }
         } catch (Exception e) {
             log.error("Erro ao exportar documentos: {}", e.getMessage());
-            dados.put(KEY_DOCUMENTOS, new ArrayList<>());
+            dados.put("documentos", new ArrayList<>());
         }
 
         // Marcações
         try {
-            if (utilizador instanceof Utente utente) {
-                dados.put(KEY_MARCACOES, marcacaoRepository.findByUtente(utente)
+            if (utilizador instanceof Utente) {
+                dados.put("marcacoes", marcacaoRepository.findByUtente((Utente) utilizador)
                         .stream()
                         .map(m -> {
                             Map<String, Object> entry = new HashMap<>();
@@ -731,23 +726,23 @@ public class UtilizadorService {
                             }
                             return entry;
                         })
-                        .toList());
+                        .collect(Collectors.toList()));
             } else {
-                dados.put(KEY_MARCACOES, new ArrayList<>());
+                dados.put("marcacoes", new ArrayList<>());
             }
         } catch (Exception e) {
             log.error("Erro ao exportar marcações: {}", e.getMessage());
-            dados.put(KEY_MARCACOES, new ArrayList<>());
+            dados.put("marcacoes", new ArrayList<>());
         }
-
+        
         // Requisições
         dados.put("requisicoes", new ArrayList<>());
-
+        
         dados.put("dataExportacao", LocalDateTime.now());
         dados.put("formatoRGPD", "Art.º 20 - Direito de Portabilidade");
-
+        
         log.info("Dados exportados para utilizador ID: {}", utilizador.getId());
-
+        
         return dados;
     }
 
